# Qt

./: .gitignore
Qt6-E3/: .gitignore  CMakeCache.txt  CMakeLists.txt  main.cpp
Qt6-E4/: CMakeLists.txt  main.cpp  readme.md  test.cpp
QtPractice/: CMakeLists.txt  main.cpp  qopencv.cpp  qopencv.h  qopencv.ui
